tests/algorithms/x/Scala/strings/word_occurrence.scala
// Generated by Mochi v0.10.63 on 2025-08-11 15:44:51 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
import scala.math.BigInt
import scala.collection.immutable.ListMap
object Main {
  private var _nowSeed: Long = 0L
  private var _nowSeeded: Boolean = false
  private def _now(): Int = {
    if (!_nowSeeded) {
      sys.env.get("MOCHI_NOW_SEED").foreach { s =>
      try { _nowSeed = s.toInt; _nowSeeded = true } catch { case _ : NumberFormatException => () }
    }
  }
  if (_nowSeeded) {
    _nowSeed = (_nowSeed * 1664525 + 1013904223) % 2147483647
    _nowSeed.toInt
  } else {
    Math.abs((System.nanoTime() / 1000).toInt)
  }
}

def toJson(value: Any, indent: Int = 0): String = value match {
  case m: scala.collection.Map[_, _] =>
  val items = ListMap(m.toSeq.sortBy(_._1.toString): _*).toSeq.map{ case (k,v) => "  "*(indent+1)+"\""+k.toString+"\": "+toJson(v, indent+1) }
  "{\n"+items.mkString(",\n")+"\n"+"  "*indent+"}"
  case s: Seq[_] =>
  val items = s.map(x => "  "*(indent+1)+toJson(x, indent+1))
  "[\n"+items.mkString(",\n")+"\n"+"  "*indent+"]"
  case s: String => "\""+s+"\""
  case other => other.toString
}

private def _str(x: Any): String = x match {
  case d: Double => if (d.isWhole) d.toLong.toString else d.toString
  case other => String.valueOf(other)
}

def word_occurrence(sentence: String): scala.collection.mutable.Map[String,BigInt] = {
  var occurrence: Map[String,BigInt] = scala.collection.mutable.Map[String,BigInt]()
  var word: String = ""
  var i: BigInt = BigInt(0)
  while (i < BigInt((sentence).size)) {
    val ch: String = sentence.slice((i).toInt, (i + BigInt(1)).toInt)
    if (ch == " ") {
      if (word != "") {
        if ((occurrence.contains(word)).asInstanceOf[Boolean]) {
          occurrence.update(word, occurrence.getOrElse(word.toString, BigInt(BigInt(0))).asInstanceOf[BigInt] + BigInt(1))
        } else {
          occurrence.update(word, BigInt(1))
        }
        word = ""
      }
    } else {
      word = word + ch
    }
    i = i + BigInt(1)
  }
  if (word != "") {
    if ((occurrence.contains(word)).asInstanceOf[Boolean]) {
      occurrence.update(word, occurrence.getOrElse(word.toString, BigInt(BigInt(0))).asInstanceOf[BigInt] + BigInt(1))
    } else {
      occurrence.update(word, BigInt(1))
    }
  }
  return occurrence
}

def main(): Any = {
  val result: scala.collection.mutable.Map[String,BigInt] = word_occurrence("INPUT STRING")
  for (w <- result.keys) {
    println(w + ": " + _str(result.getOrElse(w.toString, BigInt(BigInt(0))).asInstanceOf[BigInt]))
  }
}

def main(args: Array[String]): Unit = {
  {
    System.gc()
    val _startMem = Runtime.getRuntime.totalMemory() - Runtime.getRuntime.freeMemory()
    val _start = _now()
    main()
    val _end = _now()
    System.gc()
    val _endMem = Runtime.getRuntime.totalMemory() - Runtime.getRuntime.freeMemory()
    val _durUs = (_end - _start) / 1000
    var _memDiff = _endMem - _startMem
    if (_memDiff <= 0) _memDiff = _endMem
    println(toJson(scala.collection.immutable.Map("duration_us" -> _durUs, "memory_bytes" -> _memDiff, "name" -> "main")))
  }
}
}
